style.css
/* Stephen Hill 200240336 */

body {
    background-color: #1c1018;
}
.wrapper {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    background: rgb(104,182,132);
    background: linear-gradient(0deg, rgba(104,182,132,1) 0%, rgba(9,77,146,1) 100%);
    width: 80vw;

    align-items: center;
    justify-content: center;
}

h1, h2, ul, footer {
    color: #95e06c;
}

header {
    width: 90vw;
    text-align: center;
}

main {
    align-items: center;
    justify-content: center;
    padding: 10px;
    text-align: center;
}

#images {
    display:flex;
    flex-direction: row;
    height: 400px;
    width: 30%;
    padding-left: 30vw;
    justify-content: center;
    
}

#images img {
    margin: 30px;
}

#images img:hover {
    filter:grayscale(80%)
}


ul {
    color: #1c1018;
    list-style-position: inside;
    margin-left: -50px;
}

p {
    color: #1c1018;
    line-height: 1.4em;
}

li:nth-child(odd) {
    font-weight: bold;
}

